# signalkrpt

./: README.md  f.json  pyproject.toml  tox.ini  vessel_positions.dot
.github/workflows/: check.yml  pylint.yml  python-publish.yml
src/signalkrpt/: __main__.py  gen_dot.py  gen_scatterplot.py
